syntax = "proto3";
package user;

option go_package = "user/pb";

message FriendRequest {
  string from = 1;
  string to = 2;
  string id = 3;
  int64 timestamp = 4;
}

message CreateFriendRequestRequest {
  string from = 1;
  string to = 2;
}
message CreateFriendRequestResponse {
  string id = 1;
  string status = 2;
}

message AcceptFriendRequestRequest {
  string from = 1;
  string to = 2;
  string request_id = 3;
}
message AcceptFriendRequestResponse {
  string status = 1;
}

service UserService {
  rpc CreateFriendRequest(CreateFriendRequestRequest) returns (CreateFriendRequestResponse);
  rpc AcceptFriendRequest(AcceptFriendRequestRequest) returns (AcceptFriendRequestResponse);
}
